# wifi-daemon

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
cmake/: FindWpaCtrl.cmake
docs/: test.md  wifi-daemon-design.md
include/: mlog.h
include/proto/: wifi_proto.h
src/: wifi_cli.c  wifi_daemon.c  wpa_ctrl_compat.c
tests/integration/: test_ipc.c  test_ipc.sh
tests/unit/: test_proto.c
toolchains/: arm-none-linux-musleabihf.cmake
